# nau-engine

./: AGENTS.md  Cargo.toml  LICENSE  README.md  SHOWCASE.md
.cargo/: config.toml
docs/: ARCHITECTURE.md  EVAL_SPEC.md  ISLAND_ART_DIRECTION.md  ISLAND_SURFACE_CONTENT.md  REFERENCE_AUDIT.md  ROADMAP.md  STATUS.md  world-floor-acceptance-report.md  world-floor-requirements-audit.md
src/: animation.rs  app_tests.rs  asset_pipeline.rs  authored_assets.rs  camera.rs  camera_runtime.rs  content_diagnostics.rs  content_export.rs  debug_readout_runtime.rs  debug_visuals.rs  diagnostics.rs  environment.rs  environment_visuals.rs  eval.rs  eval_app_runtime.rs  eval_runtime.rs  game_ui_runtime.rs  generated_content.rs  island_visuals.rs  lib.rs  main.rs  movement.rs  play_profile_runtime.rs  player_runtime.rs  power_up_runtime.rs  scene_setup_runtime.rs  surface_material.rs  world.rs  world_collision_runtime.rs  world_floor_runtime.rs
tests/: dev_profile_contract.rs
tools/: camera_continuity_gate.sh  compare_manual_play_profiles.sh  compare_perf_summaries.sh  dev_play_performance_gate.sh  eval.sh  eval_sim_suite.sh  generate_glider_fixture.mjs  generate_player_fixture.mjs  generate_world_asset_fixtures.mjs  island_art_direction_gate.sh  island_hero_gallery_gate.sh  manual_play_profile.sh  perf_baseline.sh  perf_host_preflight.sh  player_pose_preview.sh  prepare_manual_profile_baseline_worktree.sh  scripted_play_profile.sh  source_identity.sh  terrain_export.sh  validate_world_floor_evidence_identity.sh  visual_content_export.sh  wind_visual_export.sh  world_content_gate.sh  (+5 more)
(+152 files in other folders)
