[package]
name = "nau-engine"
version = "0.1.0"
edition = "2024"
description = "The NAU Engine: a Mac-first Rust/Bevy flight traversal sandbox."
license = "MIT"
repository = "https://github.com/Nauxie/nau-engine"
default-run = "nau-engine"

[dependencies]
bevy = "0.18.1"
image = { version = "0.25", default-features = false, features = ["png"] }
serde_json = "1.0.150"
