[package]
name = "nau-engine"
version = "0.1.0"
edition = "2024"
description = "The NAU Engine: a Mac-first Rust/Bevy flight traversal sandbox."
license = "MIT"
repository = "https://github.com/Nauxie/nau-engine"
default-run = "nau-engine"

[dependencies]
base64 = "0.22"
bevy = "0.18.1"
image = { version = "0.25", default-features = false, features = ["png"] }
serde_json = "1.0.150"

# Keep `cargo run` playable while preserving useful debug information in our code.
# Bevy and its render stack are prohibitively slow at Cargo's default opt-level 0.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
